fixed the dark mode setting

--- a/src/componets/Setting.css
+++ b/src/componets/Setting.css
@@ -5,7 +5,7 @@
   height: 100vh; 
   padding: 20px;
   background-color: #f9f9f9;
-  border-radius: 10px;
+  border-radius: 0px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@
 
 
 
-.settings-container.light {
+.settings-container.light{
   background-color: #f9f9f9;
   color: #333;
 }
